# mfa-client-sdk-android

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
docs/: BootstrapCodeGeneration_short.txt  BootstrapCodeRegistration_short.txt  DvsRegistration_full.txt  DvsRegistration_short.txt  DvsSigning_full.txt  DvsSigning_short.txt  MFAPlatformLogin_full.txt  MFAPlatformLogin_short.txt  MobileAppLogin_full.txt  MobileAppLogin_short.txt
gradle/wrapper/: gradle-wrapper.properties
inappsample/: build.gradle  proguard-rules.pro
inappsample/src/main/: AndroidManifest.xml
inappsample/src/main/java/com/miracl/mpinsdk/inappsample/: AccessCodeObtainingTask.java  BaseActivity.java  EncryptionKeyExpired.java  EnterPinDialog.java  LoginActivity.java  MessageDialog.java  RegisterUserActivity.java  SampleApplication.java  ValidateLoginTask.java
inappsample/src/main/java/com/miracl/mpinsdk/inappsample/receivers/: AuthenticationRequestReceiver.java
inappsample/src/main/java/com/miracl/mpinsdk/inappsample/rest/: AccessCodeServiceApi.java
inappsample/src/main/java/com/miracl/mpinsdk/inappsample/rest/model/: AccessCodeInfo.java  AuthorizeUrlInfo.java
inappsample/src/main/java/com/miracl/mpinsdk/inappsample/util/: StorageAuthenticationBroadcastObserver.java
inappsample/src/main/res/layout/: activity_encryption_key_expired.xml  activity_login.xml  activity_register_user.xml
inappsample/src/main/res/values/: strings.xml
mfaSample/: build.gradle  proguard-rules.pro
mfaSample/src/main/: AndroidManifest.xml
mfaSample/src/main/java/com/miracl/mpinsdksample/: BaseActivity.java  EncryptionKeyExpired.java  EnterPinDialog.java  QrReaderActivity.java  RegisterUserActivity.java  RegistrationSuccessfulActivity.java  SampleApplication.java
mfaSample/src/main/java/com/miracl/mpinsdksample/receivers/: AuthenticationRequestReceiver.java
mfaSample/src/main/java/com/miracl/mpinsdksample/util/: CameraManager.java  CameraPreview.java  StorageAuthenticationBroadcastObserver.java  ToastUtils.java
mfaSample/src/main/res/layout/: activity_encryption_key_expired.xml  activity_qr_reader.xml  activity_registration_successful.xml
mfaSample/src/main/res/values/: strings.xml
mpinsdk/: CMakeLists.txt  build.gradle
mpinsdk/src/androidTest/java/com/miracl/mpinsdk/test/: MPinSDKTest.java
mpinsdk/src/main/java/com/miracl/mpinsdk/: MPinMFA.java  MPinMfaAsync.java  MPinSDK.java  MfaInfoCache.java
mpinsdk/src/main/java/com/miracl/mpinsdk/helpers/: EncryptionHelper.java
mpinsdk/src/main/java/com/miracl/mpinsdk/intent/: MPinIntent.java
mpinsdk/src/main/java/com/miracl/mpinsdk/model/: Expiration.java  OTP.java  RegCode.java  ServiceDetails.java  SessionDetails.java  Signature.java  Status.java  User.java  VerificationResult.java  VerificationType.java
mpinsdk/src/main/java/com/miracl/mpinsdk/net/: HTTPConnector.java  IHTTPRequest.java
mpinsdk/src/main/java/com/miracl/mpinsdk/storage/: Storage.java
mpinsdk/src/main/java/com/miracl/mpinsdk/util/: Hex.java
mpinsdk/src/main/jni/: Android.mk  Context.cpp  Context.h  Exceptions.h  HTTPConnector.h  JNICommon.cpp  JNICommon.h  JNIMPinMFA.cpp  JNIMPinMFA.h  JNIMPinSDK.cpp  JNIUser.cpp  Storage.cpp  Storage.h
mpinsdk/src/main/jni/mpin-sdk-core/include/: mfa_sdk.h  mpin_crypto.h  mpin_crypto_non_tee.h  mpin_sdk.h  mpin_sdk_base.h  utils.h
mpinsdk/src/main/jni/mpin-sdk-core/include/ext/milagro-crypto-c/include/: amcl++.h  amcl++_curve.h  amcl++_curve_BLS383.h  amcl++_curve_BN254CX.h  amcl.h  arch.h  big_256_28.h  big_384_29.h  config_big_256_28.h  config_curve_BLS383.h  config_curve_BN254CX.h  config_field_BLS383.h  config_field_BN254CX.h  ecp2_BLS383.h  ecp2_BN254CX.h  ecp_BLS383.h  ecp_BN254CX.h  fp12_BLS383.h  fp12_BN254CX.h  fp2_BLS383.h  fp2_BN254CX.h  fp4_BLS383.h  fp4_BN254CX.h  fp_BLS383.h  fp_BN254CX.h  mpin_BLS383.h  mpin_BN254CX.h  pair_BLS383.h  pair_BN254CX.h
sample/src/main/java/com/miracl/mpinsdksample/: QrReaderActivity.java  RegisterUserActivity.java  RegistrationSuccessfulActivity.java  SampleApplication.java
sample/src/main/java/com/miracl/mpinsdksample/util/: CameraManager.java
sample/src/main/res/layout/: dialog_enter_pin.xml
sample/src/main/res/values/: strings.xml
